added link for the notes

--- a/00028. Find the Index of the First Occurrence in a String.md
+++ b/00028. Find the Index of the First Occurrence in a String.md
@@ -70,6 +70,6 @@ class Solution:
 
 # Reference
 
-- Refer kmp-algorithm from the notes.
+- Refer kmp-algorithm from the [notes](https://github.com/agneshraok/notes/blob/main/engineering/software-engineering/data-structures-and-algorithms/algorithms/kmp-algorithm.md).
 - Watch this [video](https://youtu.be/V5-7GzOfADQ) to understand how to compute lps array.
 - Watch [neetcode's video](https://youtu.be/Gjkhm1gYIMw) to understand the algorithm.
