--- a/00767. Reorganize String.md
+++ b/00767. Reorganize String.md
@@ -45,10 +45,49 @@
 <br>
 <br>
 
-# Effiecnt
+# Efficient, O(n\*logn)
 
 - Using heaps!
 
-```py
+  ```py
+  class Solution:
+      def reorganizeString(self, s: str) -> str:
+          count = Counter(s)
+          max_heap = [[-freq, char] for char, freq in count.items()]
+          heapq.heapify(max_heap) #O(n)
+          res = ''
+          prev = None
 
-```
+          while max_heap or prev:
+              if (prev and not max_heap):
+                  return ""
+              freq, char = heapq.heappop(max_heap)
+              res += char
+              freq += 1   #We increment this because we are using min_heap as max_heap
+
+              if prev:
+                  heapq.heappush(max_heap, prev)
+                  prev = None
+
+              if freq != 0:
+                  prev = [freq, char] #No need of -freq because it is already calculated above
+          return res
+  ```
+
+<br>
+<br>
+
+## Python's heapq module
+
+<br>
+<br>
+
+## Using minheap to implement maxheap
+
+<br>
+<br>
+<br>
+
+# Reources
+
+- [neetcode](https://youtu.be/2g_b1aYTHeg?si=nDQHCgMY4DNHV6La)
