--- a/00767. Reorganize String.md
+++ b/00767. Reorganize String.md
@@ -77,17 +77,8 @@
 <br>
 <br>
 
-## Python's heapq module
-
-<br>
-<br>
-
-## Using minheap to implement maxheap
-
-<br>
-<br>
-<br>
-
 # Reources
 
-- [neetcode](https://youtu.be/2g_b1aYTHeg?si=nDQHCgMY4DNHV6La)
+- Checkout notes on [heap data structure](https://github.com/agneshraok/notes/blob/main/engineering/software-engineering/data-structures-and-algorithms/data-structures/06-heap.md)
+- Checkout notes on [python's heapq module](https://github.com/agneshraok/notes/blob/main/engineering/software-engineering/programming-languages/python/07-modules/heapq.md)
+- This is [neetcode's solution](https://youtu.be/2g_b1aYTHeg?si=nDQHCgMY4DNHV6La)
